Moved project over to Maven and restructured everything

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,43 @@
-# Do not share these files
+# Ignore #
 
-output
-test
-*.idea
+# Intellij #
+.idea
+*.iml
 
+# Logs #
+*.log
+log4j.properties
 
+# Maven #
+target/
+
+# VIM #
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+Session.vim
+.netrwhist
+*~
+tags
+
+# Linux #
+.fuse_hidden*
+.directory
+.Trash-*
+
+# OSX #
+*.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+
+# Windows #
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+*.cab
+*.msi
+*.msm
+*.msp
+*.lnk
